# statistics-manager

./: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
api/: settings.py  urls.py
post_statistics/: apps.py  models.py  serializers.py  utils.py  viewsets.py
post_statistics/migrations/: 0001_initial.py
post_statistics/tests/: fixture.py  test_models.py  test_viewsets.py
