[tool.poetry]
name = "statistics-manager"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley_gto_x@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^21.2.4"
install = "^1.3.4"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
python-decouple = "^3.4"
routers = "^0.10.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
factory-boy = "^3.2.0"
Faker = "^8.12.1"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
pytest-flake8 = "^1.0.7"
pytest-pythonpath = "^0.7.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
